--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container p-5">
   <h3>Angular Directives Study</h3>
   <hr />
+
+  <p *appIfClone="active">I am active</p>
+
+  <p *appIfClone="!active">I am inactive</p>
 </div>
