--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,44 @@
 <ng-template #pTemp let-name="firstName" let-city="currentCity">
-  <p>This is a paragraph {{ title }} / {{ name }} / {{ city }}</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+</ng-template>
+
+<ng-template #warning>
+  <div class="alert alert-warning" role="alert">
+    A simple warning alert—check it out!
+  </div>
 </ng-template>
 
 <div class="container p-5">
   <h3>Angular Directives Study</h3>
   <hr />
-
-  <ng-container *ngTemplateOutlet="pTemp; context: person"></ng-container>
+  <app-sample [template]="pTemp"></app-sample>
 </div>
