--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="container p-5">
   <h3>Angular Directives Study</h3>
+
   <hr />
+  <app-sample>
+    <app-demo [index]="1"></app-demo>
+    <app-demo [index]="2"></app-demo>
+    <app-demo [index]="3"></app-demo>
+    <app-demo [index]="4"></app-demo>
+    <app-demo [index]="5"></app-demo>
+    <app-demo [index]="6"></app-demo>
+  </app-sample>
 </div>
